Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11149

wsrep_replicate_mysaim: DML fails when binlog checksum enabled

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.18, 10.2.2, 10.0.27-galera, 5.5.53-galera
    • 10.2.3
    • wsrep
    • None

    Description

      Test case:

      let $wsrep_replicate_myisam_saved= `SELECT @@wsrep_replicate_myisam`;
      SET @@global.wsrep_replicate_myisam=1;
       
      CREATE TABLE t1 (i INT) ENGINE=MYISAM;
      # The following INSERT fails.
      INSERT INTO t1 VALUES(1);
       
      --connection node_2
      SELECT * FROM t1;
       
      --connection node_1
      DROP TABLE t1;
      eval SET @@global.wsrep_replicate_myisam=$wsrep_replicate_myisam_saved;
      

      Warnings in error log:

      2016-10-26 11:44:33 140222359802624 [ERROR] Replication event checksum verification failed while reading from a log file
      2016-10-26 11:44:33 140222359802624 [ERROR] Error in Log_event::read_log_event(): 'Replication event checksum verification failed while reading from a log file', data_len: 87, event_type: 2
      2016-10-26 11:44:33 140222359802624 [ERROR] WSREP: applier could not read binlog event, seqno: 6, len: 0
      

      Attachments

        Activity

          People

            nirbhay_c Nirbhay Choubey (Inactive)
            nirbhay_c Nirbhay Choubey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: